# doc/api.yaml
@@ -378,6 +378,75 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error500'
 
+  /users/{User_id}/photo:
+    get:
+      summary: Recupera la foto profilo di un utente
+      description: Restituisce l'immagine profilo di un utente come BLOB dal database.
+      tags: ["users"]
+      parameters:
+        - name: User_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100000
+            description: ID dell'utente di cui recuperare la foto
+      responses:
+        "200":
+          description: Foto profilo restituita con successo
+          content:
+            image/png:
+              schema:
+                type: string
+                description: "Photo succesfully returned"
+                pattern: "^[a-zA-Z0-9 .,!?'-]+$"
+                minLength: 3
+                maxLength: 1000
+            image/png:
+              schema:
+                type: string
+                format: binary
+                description: "The photo"
+                pattern: "[0,1]"
+                minLenght: 1
+                maxLenght: 9999999999999999999
+        '400':
+          description: Invalid input or bad request.
+          content:
+            application/json:
+              schema:
+                type: object
+                description: Schema for negative response caused by invalid input.
+                properties:
+                  error:
+                    type: string
+                    description: "Error details, e.g., invalid User_id or invalid body."
+                    pattern: "^[a-zA-Z0-9 .,!?'-]+$"
+                    minLength: 3
+                    maxLength: 1000
+        "404":
+          description: User doesn't have a photo.
+          content:
+            application/json:
+              schema:
+                type: object
+                description: Schema for negative response caused by unexisting photo.
+                properties:
+                  error:
+                    type: string
+                    description: "Error details, e.g., invalid User_id or invalid body."
+                    pattern: "^[a-zA-Z0-9 .,!?'-]+$"
+                    minLength: 3
+                    maxLength: 1000
+        '500':
+          description: Internal server error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error500'
+
+
   # -------------------------------------------------------
   # CONVERSATIONS
   # -------------------------------------------------------
